Assets working - Summernote, CodeMirror, and gem-ified Bootstrap

--- a/app/views/layouts/hemmingway/application.html.erb
+++ b/app/views/layouts/hemmingway/application.html.erb
@@ -3,13 +3,11 @@
 <head>
   <title>Hemmingway</title>
   <%= stylesheet_link_tag    "hemmingway/application", media: "all" %>
-  <%= stylesheet_link_tag    "//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css", media: "all" %>
   
   <%= javascript_include_tag "hemmingway/application" %>
-  <%= javascript_include_tag "//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body id="hemmingway">
 
 <div class="container">
   <div class="col-md-12">
