--- a/app/views/hemmingway/pages/_form.html.erb
+++ b/app/views/hemmingway/pages/_form.html.erb
@@ -34,7 +34,7 @@
     <div class="col-md-12">
       <div class="form-group">
         <%= f.label :html %><br>
-        <%= f.text_area :html, size: '5x10', class: 'summernote' %>
+        <%= f.text_area :html, size: '5x10', class: 'summernote', data: { summernote: 'true' } %>
       </div>
     </div>
   </div>
