--- a/app/views/layouts/hemmingway/application.html.erb
+++ b/app/views/layouts/hemmingway/application.html.erb
@@ -7,7 +7,7 @@
   <%= javascript_include_tag "hemmingway/application" %>
   <%= csrf_meta_tags %>
 </head>
-<body id="hemmingway">
+<body>
 
 <% if flash[:notice] %>
   <div class="alert alert-info alert-dismissable">
