--- a/app/assets/stylesheets/hemmingway/application.css.scss
+++ b/app/assets/stylesheets/hemmingway/application.css.scss
@@ -1,9 +1,1 @@
-// CSS for layouts and editors
-@import 'bootstrap';
-@import 'font-awesome-sprockets';
-@import 'font-awesome';
-@import 'summernote';
-@import 'codemirror';
-@import 'codemirror/themes/solarized';
-
-body { padding-top:3em; }
+@import "hemmingway/hemmingway"
