--- a/app/views/hemmingway/pages/index.html.erb
+++ b/app/views/hemmingway/pages/index.html.erb
@@ -1,25 +1,27 @@
-<h1>Your pages</h1>
+<%= render layout: 'container' do %>
+  <h1>Your pages</h1>
 
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th>Url</th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @pages.each do |page| %>
+  <table class="table table-bordered">
+    <thead>
       <tr>
-        <td><%= link_to page.url, page_path(page.url) %></td>
-        <td>
-          <%= link_to 'Show', page, class: 'btn btn-info' %>
-          <%= link_to 'Edit', edit_page_path(page), class: 'btn btn-info' %>
-          <%= link_to 'Destroy', page, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
-        </td>
+        <th>Url</th>
+        <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<%= link_to 'New Page', new_page_path, class: 'btn btn-success' %>
+    <tbody>
+      <% @pages.each do |page| %>
+        <tr>
+          <td><%= link_to page.url, page_path(page.url) %></td>
+          <td>
+            <%= link_to 'Show', page, class: 'btn btn-info' %>
+            <%= link_to 'Edit', edit_page_path(page), class: 'btn btn-info' %>
+            <%= link_to 'Destroy', page, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <%= link_to 'New Page', new_page_path, class: 'btn btn-success' %>
+<% end %>
