--- a/app/views/hemmingway/pages/new.html.erb
+++ b/app/views/hemmingway/pages/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New page</h1>
+<%= render layout: 'container' do %>
+  <h1>New page</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', pages_path %>
+  <div class="pull-right">
+    <%= link_to 'Back', pages_path %>
+  </div>
+<% end %>
