--- a/app/views/hemmingway/pages/edit.html.erb
+++ b/app/views/hemmingway/pages/edit.html.erb
@@ -4,7 +4,7 @@
   <%= render 'form' %>
 
   <div class="pull-right">
-    <%= link_to 'Show', @page %>
-    <%= link_to 'Back', pages_path %>
+    <%= link_to 'Show', parent_page_path(@page.to_param) %>
+    <%= link_to 'Back', hemmingway_pages_path %>
   </div>
 <% end %>
