--- a/app/views/hemmingway/pages/new.html.erb
+++ b/app/views/hemmingway/pages/new.html.erb
@@ -4,6 +4,6 @@
   <%= render 'form' %>
 
   <div class="pull-right">
-    <%= link_to 'Back', pages_path %>
+    <%= link_to 'Back', hemmingway_pages_path %>
   </div>
 <% end %>
