--- a/app/assets/stylesheets/hemmingway/_hemmingway.scss
+++ b/app/assets/stylesheets/hemmingway/_hemmingway.scss
@@ -26,11 +26,9 @@
   -webkit-tap-highlight-color: transparent;
 
   // from bootstrap/_normalize body {}
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  // font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857;
-  color: #333333;
-  background-color: #fff;
 
   @import "font-awesome/variables";
   @import "font-awesome/mixins";
