--- a/app/assets/stylesheets/hemmingway/_hemmingway.scss
+++ b/app/assets/stylesheets/hemmingway/_hemmingway.scss
@@ -1,96 +1,84 @@
 // Styles for Hemmingway - namespaced, so we
 // won't mess up your app's stylesheets
 
-
-// Namespaced font-awesome
-@font-face {
-  font-family: 'FontAwesomeHemmingway';
-  src: url("/assets/font-awesome/fontawesome-webfont.eot");
-  src: url("/assets/font-awesome/fontawesome-webfont.eot?#iefix") format("embedded-opentype"), url("/assets/font-awesome/fontawesome-webfont.woff") format("woff"), url("/assets/font-awesome/fontawesome-webfont.ttf") format("truetype"), url("/assets/font-awesome/fontawesome-webfont.svg#fontawesomeregular") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
 #hemmingway {
-  // font-awesome core, using our namespaced font
-  .fa {
-    display: inline-block;
-    font: normal normal normal 14px/1 FontAwesomeHemmingway; // shortening font declaration
-    font-size: inherit; // can't have font-size inherit on line above, so need to override
-    text-rendering: auto; // optimizelegibility throws things off #1094
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  h1 { margin-bottom: 2rem; }
+
+  .pull-left { float: left; }
+  .pull-right { float: right; }
+  
+  .text-left { text-align: left; }
+  .text-right { text-align: right; }
+
+  table {
+    tr { margin: 1.5rem 0 1.5rem 0; }
   }
 
-  // from bootstrap/_normalize html {}
-  -webkit-tap-highlight-color: transparent;
+  form ~ .action-links {
+    position: relative;
+    top: -2rem;
+    text-align: right;
+    float: right;
+  }
 
-  // from bootstrap/_normalize body {}
-  // font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 1.42857;
+  .row {
+    margin-bottom: 2rem;
+    overflow: hidden;
+    .col-md-6 {
+      input[type="text"] {
+        display: inline;
+      }
+      float: left;
+      width: 50%;
+    }
+  }
 
-  @import "font-awesome/variables";
-  @import "font-awesome/mixins";
-  @import "font-awesome/larger";
-  @import "font-awesome/fixed-width";
-  @import "font-awesome/list";
-  @import "font-awesome/bordered-pulled";
-  @import "font-awesome/spinning";
-  @import "font-awesome/rotated-flipped";
-  @import "font-awesome/stacked";
-  @import "font-awesome/icons";
+  .btn {
+    display: inline-block;
+    zoom: 1;
+    line-height: normal;
+    white-space: nowrap;
+    vertical-align: baseline;
+    text-align: center;
+    cursor: pointer;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    margin-right: 2rem;
+    
+    font-size: 100%;
+    padding: .5em 1em;
+    color: #444;
+    color: rgba(0,0,0,.8);
+    
+    border: 1px solid #999;
+    border: 0 rgba(0,0,0,0);
+    
+    background-color: #E6E6E6;
+    text-decoration: none;
+    border-radius: 2px;
+    font-family: inherit;
+  }
 
-  // Core variables and mixins
-  @import "bootstrap/variables";
-  @import "bootstrap/mixins";
+  .btn-success, .btn-danger, .btn-info {
+    color: white;
+    border-radius: 4px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  }
 
-  // Reset and dependencies
-  @import "bootstrap/normalize";
+  .btn-info {
+    background: rgb(66, 184, 221);
+  }
 
-  // Core CSS
-  @import "bootstrap/scaffolding";
-  @import "bootstrap/type";
-  @import "bootstrap/code";
-  @import "bootstrap/grid";
-  @import "bootstrap/tables";
-  @import "bootstrap/forms";
-  @import "bootstrap/buttons";
+  .btn-danger {
+    background: rgb(202, 60, 60);
+  }
 
-  // Components
-  @import "bootstrap/component-animations";
-  @import "bootstrap/dropdowns";
-  @import "bootstrap/button-groups";
-  @import "bootstrap/input-groups";
-  @import "bootstrap/navs";
-  @import "bootstrap/navbar";
-  @import "bootstrap/breadcrumbs";
-  @import "bootstrap/pagination";
-  @import "bootstrap/pager";
-  @import "bootstrap/labels";
-  @import "bootstrap/badges";
-  @import "bootstrap/jumbotron";
-  @import "bootstrap/thumbnails";
-  @import "bootstrap/alerts";
-  @import "bootstrap/progress-bars";
-  @import "bootstrap/media";
-  @import "bootstrap/list-group";
-  @import "bootstrap/panels";
-  @import "bootstrap/wells";
-  @import "bootstrap/close";
+  .btn-success {
+    background: rgb(28, 184, 65);
+  }
 
-  // Components w/ JavaScript
-  @import "bootstrap/modals";
-  @import "bootstrap/tooltip";
-  @import "bootstrap/popovers";
-  @import "bootstrap/carousel";
-
-  // // Utility classes
-  @import "bootstrap/utilities";
-  
-  @import 'summernote';
-  
-  @import 'codemirror';
-  @import 'codemirror/themes/solarized';
+  a {
+    .cke_button: { height: 22px; }
+  }
 
 }
