--- a/app/views/hemmingway/pages/new.html.erb
+++ b/app/views/hemmingway/pages/new.html.erb
@@ -3,7 +3,7 @@
 
   <%= render 'form' %>
 
-  <div class="pull-right">
+  <div class="action-links">
     <%= link_to 'Back', hemmingway_pages_path %>
   </div>
 <% end %>
