--- a/app/views/hemmingway/pages/show.html.erb
+++ b/app/views/hemmingway/pages/show.html.erb
@@ -1,13 +1,12 @@
 <% if @is_admin %>
-  <div id="hemmingway">
-    <div data-air-mode="true" data-form-target="#edit_page_<%= @page.id %>">
-      <%= @page.html.html_safe %>
-    </div>
+  
     <%= form_for @page, url: parent_page_path(@page.to_param), html: {method: 'patch'} do |f| %>
-      <%= f.text_area :html, style: 'display: none' %>
-      <%= f.submit 'Save', class: 'btn btn-success' %>
+      <%= f.text_area :html, data: { hw_editor: 'inline' } %>
+      <div id="hemmingway">
+        <%= f.submit 'Save', class: 'btn btn-success' %>
+      </div>
     <% end %>
-  </div>
+  
 <% else %>
   <%= @page.html.html_safe %>
 <% end %>
