MUCH better spec suite

--- a/app/views/hemmingway/pages/_form.html.erb
+++ b/app/views/hemmingway/pages/_form.html.erb
@@ -68,7 +68,7 @@
       <% unless page.new_record? %>
         <%= link_to 'Show', hw_page_path(page), class: 'btn btn-info' %>
       <% end %>
-      <%= link_to 'All Pages', hemmingway_pages_path, class: 'btn btn-info' %>
+      <%= link_to 'All Pages', hw_pages_path, class: 'btn btn-info' %>
     </div>
   </div>
 <% end %>
